# ingestion

./: README.md  additional_data_from_sds.py  analysis.ipynb  app_insights_connector.py  constants.py  example.py  ingest.py  main.py  models.py  outputs.py  pyproject.toml  recursive_result.txt  requirements.txt  retrieve.py
connectors/: app_insights_connector.py  neo4j_connector.py
experiment/: additional_data_from_sds.py  experiment.py  gliner_ner.py  interesting_docs_analysis (1).xlsx
experiment/experiment_chroma_db/: chroma.sqlite3
experiment/json_dump/: additional_data.json  additional_data2.json  cumulative_result4.json  echa.json  matcomp_included.json  newtoxicological_info3.json  newtoxicological_info4.json  recursive_results.json  result.json  result_ 1720605919.47.json  result_ 1720606016.32.json  result_1720679034.json  result_1720778073.json  result_1720778211.json  result_1720778424.json  result_1720782627.json  result_1720783665.json  result_1720785298.json  result_1721042906.json  result_1721108931.json  result_1721108973.json  result_1721109389.json  result_1721111889.json  results.json  resultsssss.json  semantic_results.json  tempdelete.json  (+2 more)
json_dump/: cumulative_result.json  cumulative_result2.json  cumulative_result3.json  newtoxicological_info.json  newtoxicological_info2.json  newtoxicological_info5.json  svhc_included.json  test_from_excel(wrong_ones_that_had_missing_chemicals).json
neo4j_research/: test.py
service/: app.py
utils/: cleaner.py  create_graph.py  dict_reorderer.py  file_mapper.py  store_results.py  store_to_neo4j.py
(+4 files in other folders)
