[tool.poetry]
name = "viridium-ingestion"
version = "0.1.0"
description = ""
authors = ["Yasho-Bapat <f20210006@goa.bits-pilani.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.6"
pydantic = "^2.7.4"
langchain-community = "^0.2.6"
langchain-chroma = "^0.1.2"
langchain-openai = "^0.1.13"
pypdf = "^4.2.0"
sentence-transformers = "^3.0.1"
langchain-experimental = "^0.0.62"
jupyter = "^1.0.0"
pandas = "^2.2.2"
cohere = "^5.5.8"
Flask = "^3.0.3"
flask-swagger-ui = "4.11.1"
gunicorn = "22.0.0"
flask-cors = "4.0.1"
apispec = "6.6.1"
apispec-webframeworks = "1.1.0"
marshmallow = "3.21.2"
werkzeug = "^3.0.3"
flask-reuploaded = "^1.4.0"
opencensus-ext-azure = "^1.1.13"
opencensus = ">=0.11.4,<0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
